@@ -1,6 +1,7 @@
 v1.3.3 (2018.08.xx)
   - Treat discovery errors generated during PVR startup as non-fatal and continue execution of remaining discovery tasks
   - Abort device discovery if no tuner devices were discovered; leave existing device and channel lineup information intact
+  - Add "Demo Channels" channel group
 
 v1.3.2 (2018.08.13)
   - Update cURL library to version 7.61.0
